[Qt][WK2] Fix bounce-back behaviour for panning https://bugs.webkit.org/show_bug.cgi?id=81144

Reviewed by Kenneth Rohde Christiansen.

Move the content back to boundaries immediately
in response to a tap gesture during the bounce-back
animation after panning.

* UIProcess/qt/QtPanGestureRecognizer.cpp:
(WebKit::QtPanGestureRecognizer::recognize):
* UIProcess/qt/QtViewportInteractionEngine.h:
Make the ensureContentWithinViewportBoundary function public.
(QtViewportInteractionEngine):

Canonical link: https://commits.webkit.org/98412@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110850 268f45cc-cd09-0410-ab3c-d52691b4dbfc